Text: fix alignment responsive

--- a/scss/base/_text.scss
+++ b/scss/base/_text.scss
@@ -163,19 +163,19 @@ Class CSS à utiliser:
 .text-right { text-align: right; }
 .text-center { text-align: center; }
 
-@media (max-width: $screen-xs-max) {
+@media (min-width: $screen-sm-min) {
   .sm-text-left { text-align: left; }
   .sm-text-right { text-align: right; }
   .sm-text-center { text-align: center; }
 }
 
-@media (max-width: $screen-sm-max) {
+@media (min-width: $screen-md-min) {
   .md-text-left { text-align: left; }
   .md-text-right { text-align: right; }
   .md-text-center { text-align: center; }
 }
 
-@media (max-width: $screen-md-max) {
+@media (min-width: $screen-lg-min) {
   .lg-text-left { text-align: left; }
   .lg-text-right { text-align: right; }
   .lg-text-center { text-align: center; }
